css/src/style.scss
/* ... */
img.blog-thumbnail {
  width: 100%;
  max-width: 100%;
  height: auto;
  padding: 5px;
  background: #fff;
}

.image {
  position: relative;
  padding-bottom: 100%;

  img {
    position: absolute;
    max-width: 100%;
    max-height: 100%;
    top: 50%;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
  }
}

.image-text {
  margin-top: 20px;
  height: 60px;

  a,
  a:hover,
  a:visited {
    color: #777;
  }
  img {
    float: left;
    margin-right: 7px;
  }
  p {
    font-size: 14px;
    font-weight: 300;
    display: flex;
    align-items: center;
    width: 80px;
    height: 60px;
  }
}

.related-pages p {
  margin: 0;
}

h3.collapse-header {
  margin-top: 10px;
  margin-bottom: 10px;
}
[data-toggle="collapse"].collapsed .if-not-collapsed {
  display: none;
}
[data-toggle="collapse"]:not(.collapsed) .if-collapsed {
  display: none;
}

.product-links {
  margin-top: 40px;

  &.single {
    margin-top: 0;
  }

  .row {
    @media #{$tablet} {
      &:first-child {
        padding-top: 15px;
      }
    }
    margin-left: 0px;
    margin-right: 0px;
  }

  a {
    display: inline-block;
    width: 32px;
    height: 32px;
    margin: 5px;

    @media #{$desktop} {
      &:hover {
        transform: scale(1.08);
      }
      &[href="#"]:hover {
        transform: none;
      }
    }
  }
  span {
    /* Hide text */
    text-indent: 100%;
    white-space: nowrap;
    overflow: hidden;

    &.product {
      display: inline-block;
      background-repeat: no-repeat;
      margin-left: auto;
      margin-right: auto;

      @mixin product($name, $shape, $size, $ext, $suffix: "") {
        &.#{$name}#{$suffix} {
          width: #{$size}px;
          height: #{$size}px;
          background-image: url("../images/products/#{$name}-#{$shape}-#{$size}.#{$ext}");
          background-size: #{$size}px;
        }
      }

      &.round {
        @mixin product_private($name) {
          @include product($name, round, 32, png);
        }
        @include product_private(sports-3dma);
        @include product_private(cycling-3dma);
        @include product_private(golf-3dma);
        @include product_private(running-3dma);
        @include product_private(clinical-3dma);
        @include product_private(human-3dma);
        @include product_private(eddo);
        @include product_private(isen);
        @include product_private(bikefit);
      }

      &.square {
        @mixin product_private($name) {
          @include product($name, square, 48, jpg, -sm);
          @include product($name, square, 72, png, -md);
        }

        @include product_private(sports-3dma);
        @include product_private(cycling-3dma);
        @include product_private(golf-3dma);
        @include product_private(running-3dma);
        @include product_private(clinical-3dma);
        @include product_private(human-3dma);
        @include product_private(eddo);
        @include product_private(isen);
        @include product_private(bikefit);
      }
    }
  }
}
.product-tabs {
  position: relative;
  height: 72px;
  margin-bottom: 20px;

  .product-links {
    margin: 0;
    position: absolute;
    left: 50%;
    -ms-transform: translate(-50%, 0%);
    transform: translate(-50%, 0%);

    a {
      width: auto;
      height: auto;
      &:not([href="#"]) {
        -webkit-filter: grayscale(98%);
        filter: grayscale(98%);
        opacity: 0.4;
      }
    }
  }
}
@media #{$tablet} {
  .product-tabs {
    display: none;
  }
}

.product-name {
  font-size: 18px;
  font-weight: 300;
  color: color(white);
  margin-top: 10px;
  height: 50px;
}

.row .distributor {
  font-size: 18px;

  &:nth-child(odd):not(:last-child) {
    padding-top: 25px;
  }
  &:nth-child(even) {
    padding-bottom: 25px;
  }

  h3 {
    padding-bottom: 0;
  }

  .product-links {
    margin-top: 0px;

    [class*="col-"] {
      padding: 0px;
      margin: 0px;
    }

    a {
      width: 24px;
      height: 24px;
      margin: 0px;
      margin-left: 5px;
    }
    .product {
      width: 24px !important;
      height: 24px !important;
      background-size: 24px !important;
    }

    #current {
      height: 1px;
    }
  }

  .logo {
    display: flex;
    align-items: center;
  }
  .country {
    display: flex;
    margin-top: 8px;
    justify-content: flex-start;
    font-weight: 700;
  }

  .type {
    margin-left: 3px;

    @mixin type($name) {
      .#{$name} {
        display: inline-block;
        width: 32px;
        height: 32px;
        margin-left: 4px;
        margin-bottom: -5px;

        background-image: url("../images/distributor-#{$name}.png");
        background-size: cover;

        /* Hide text */
        text-indent: 100%;
        white-space: nowrap;
        overflow: hidden;
      }
    }
    @include type(premium);
    @include type(exclusive);

    #current {
      display: inline-block;
      vertical-align: middle;
      font-size: 14px;
      margin-left: 6px;
      height: 26px;
    }
  }
}

// Cookies (GDPR)
#cookie-notice {
  &.cn-top.bootstrap {
    display: table;
  }

  .cn-button {
    font-size: 14px;
  }

  .cookie-notice-container {
    height: 91px;
    display: table-cell;
    vertical-align: middle;
    font-size: 16px;
  }
}

